--- a/index.html
+++ b/index.html
@@ -10,21 +10,7 @@
 <body>
   <h1 id="titulo"> Seja Bem Vindo (a)</h1>
 
-<aside>
-  <div id="menu-opener" onclick="menuToogle()">
-    <img src="download.png" width="36"/>
-  </div>
-
-  <div id="menu-area">
-    <ul>
-      <li>HOME</li>
-      <li>CONTATO</li>
-      <li>SOBRE</li>
-    </ul>
-  </div>
-  
-</aside>
-
+<div id="dia"></div>
 
   <script src="script.js"></script>
 </body>
