--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <h1 id="titulo"> Seja Bem Vindo (a)</h1>
 
-<div id="dia"></div>
+ <div class="demo"></div>
+
 
   <script src="script.js"></script>
 </body>
